--- a/css/components/_mobile-menu.scss
+++ b/css/components/_mobile-menu.scss
@@ -41,8 +41,10 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      rotate: 0deg;
-      transition: rotate 0.2s linear;
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: transform 0.2s ease;
+      transition: transform 0.2s ease;
 
       div {
         position: absolute;
@@ -61,8 +63,10 @@
         border-radius: 5px;
         width: 100%;
         height: 3px;
+        -webkit-transform: translateY(8px);
         transform: translateY(8px);
-        transition: transform 0.2s linear;
+        -webkit-transition: transform 0.2s ease;
+        transition: transform 0.2s ease;
       }
 
       &::after {
@@ -72,23 +76,28 @@
         border-radius: 5px;
         width: 100%;
         height: 3px;
+        -webkit-transform: translateY(-8px);
         transform: translateY(-8px);
-        transition: transform 0.2s linear;
+        -webkit-transition: transform 0.2s ease;
+        transition: transform 0.2s ease;
       }
 
       // Turns into X when clicked
       &.active {
-        rotate: 180deg;
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
 
         div {
           opacity: 0;
         }
 
         &::before {
+          -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
         }
 
         &:after {
+          -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
         }
       }
@@ -121,7 +130,9 @@
 
             li {
               list-style-type: none;
+              -webkit-transform: translateX(-100px);
               transform: translateX(-100px);
+              -webkit-transition: transform 0.5s ease;
               transition: transform 0.5s ease;
 
               a {
@@ -136,10 +147,12 @@
         }
 
         &.open {
+          -webkit-transform: translateX(0);
           transform: translateX(0);
 
           ul {
             li {
+              -webkit-transform: translateX(0);
               transform: translateX(0);
 
               &:nth-child(1) {
