--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,7 @@ html {
 
       .site-main {
         margin-top: 10em;
+        padding: 1em;
 
         .homepage-title {
           text-align: center;
