--- a/css/components/_single-product.scss
+++ b/css/components/_single-product.scss
@@ -30,7 +30,7 @@
 
       @include inputNumber(0);
 
-      .wp-element-button {
+      .single_add_to_cart_button {
         @include button();
         margin: 0;
         font-size: 1rem;
