--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -22,7 +22,7 @@ $biggerScreen2: 2559px;
 
         li {
           .price,
-          .wp-element-button {
+          .add_to_cart_button {
             font-size: 2rem;
           }
         }
@@ -64,7 +64,7 @@ $biggerScreen2: 2559px;
               font-size: 1.5rem;
             }
 
-            .wp-element-button {
+            .add_to_cart_button {
               font-weight: bold;
               font-size: 1.5rem;
             }
@@ -100,7 +100,7 @@ $biggerScreen2: 2559px;
             }
           }
 
-          .wp-element-button {
+          .add_to_cart_button {
             font-size: 1.5rem;
           }
         }
@@ -269,7 +269,7 @@ $biggerScreen2: 2559px;
           }
 
           .price,
-          .wp-element-button {
+          .add_to_cart_button {
             font-size: 1rem;
           }
         }
@@ -282,7 +282,7 @@ $biggerScreen2: 2559px;
         .entry-summary {
           li {
             .price,
-            .wp-element-button {
+            .add_to_cart_button {
               font-size: 1rem;
             }
           }
@@ -458,7 +458,7 @@ $biggerScreen2: 2559px;
 
         li {
           .price,
-          .wp-element-button {
+          .add_to_cart_button {
             font-size: 1rem;
           }
         }
@@ -473,7 +473,7 @@ $biggerScreen2: 2559px;
           }
 
           .cart {
-            .wp-element-button {
+            .add_to_cart_button {
               font-size: initial;
             }
 
@@ -490,7 +490,7 @@ $biggerScreen2: 2559px;
             font-size: 2.5rem;
           }
 
-          .wp-element-button {
+          .add_to_cart_button {
             font-size: initial;
           }
         }
@@ -525,7 +525,7 @@ $biggerScreen2: 2559px;
           font-size: initial;
         }
 
-        .wp-element-button {
+        .add_to_cart_button {
           font-size: initial;
         }
 
