--- a/css/components/_footer.scss
+++ b/css/components/_footer.scss
@@ -16,7 +16,7 @@ footer {
 
   .sm-icons-footer {
     display: flex;
-    gap: 1em;
+    gap: 2em;
 
     a {
       text-decoration: none;
@@ -25,6 +25,10 @@ footer {
       &:hover {
         transform: scale(1.1);
       }
+    }
+
+    span {
+      font-size: 1.5rem;
     }
   }
 
