--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -23,7 +23,7 @@ $biggerScreen2: 2559px;
         li {
           .price,
           .add_to_cart_button {
-            font-size: 2rem;
+            font-size: 1.6rem;
           }
         }
       }
@@ -54,7 +54,7 @@ $biggerScreen2: 2559px;
 
           .price {
             font-weight: bold;
-            font-size: 1.5rem;
+            font-size: 2rem;
           }
 
           .cart {
@@ -64,9 +64,9 @@ $biggerScreen2: 2559px;
               font-size: 1.5rem;
             }
 
-            .add_to_cart_button {
+            .single_add_to_cart_button {
               font-weight: bold;
-              font-size: 1.5rem;
+              font-size: 1.8rem;
             }
           }
         }
@@ -98,10 +98,10 @@ $biggerScreen2: 2559px;
             .price {
               font-size: 1.5rem;
             }
-          }
 
-          .add_to_cart_button {
-            font-size: 1.5rem;
+            .add_to_cart_button {
+              font-size: 1.5rem;
+            }
           }
         }
       }
@@ -282,7 +282,7 @@ $biggerScreen2: 2559px;
         .entry-summary {
           li {
             .price,
-            .add_to_cart_button {
+            .single_add_to_cart_button {
               font-size: 1rem;
             }
           }
@@ -473,7 +473,7 @@ $biggerScreen2: 2559px;
           }
 
           .cart {
-            .add_to_cart_button {
+            .single_add_to_cart_button {
               font-size: initial;
             }
 
